contract stats
